Fixed alignment for genres list

--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,7 @@ nav ul li a {
   background-color: #1f1c27;
   padding: .7rem 1.5rem;
   border-radius: 1.5rem;
+  font-size: 1.3rem;
 }
 
 nav ul li a:hover {
@@ -90,11 +91,11 @@ div a {
 
 .page-nav {
   align-items: center;
-  padding: 0 5rem;
+  margin: 0 20% 30px;
 }
 .page-nav ul li a {
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   color: #f0e9dc;
   background-color: black;
   padding: .7rem 1.5rem;
@@ -171,13 +172,17 @@ h3 {
 
 .genres article {
   background-color: rgba(189, 81, 145);
-  text-align: center;
 }
 
 .genres li {
   list-style-type: none;
   color: #f0e9dc;
   font-family: "Inter", sans-serif;
+}
+
+.genres ul {
+  padding: 0;
+  text-align: center;
 }
 
 .slide {
